sample/src/strategy_pattern/good/FlyBehavior.java
package strategy_pattern.good;

public interface FlyBehavior {
  void fly();
}
