sample/src/strategy_pattern/bad/Duck.java
package strategy_pattern.bad;

abstract class Duck {

  public void quack(){}
  public void fly(){}

  abstract void display();

}
